# PNMLibrary

./: README.md  build_gramine.sh  build_kernel.sh  build_perfsim.sh  build_userspace.sh  setup_imdb_func_sim.sh  setup_repos.sh  setup_sls_func_sim.sh
PNMLibrary/: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ignorelist_ubsan.txt
PNMLibrary/benchmarks/: CMakeLists.txt
PNMLibrary/benchmarks/allocator/: build.cmake  imdb.cpp  ranked.cpp
PNMLibrary/benchmarks/bit_vector/: build.cmake  main.cpp
PNMLibrary/benchmarks/data_transfer/: build.cmake  main.cpp
PNMLibrary/benchmarks/imdb_scan/: build.cmake  common.h  cpu.cpp  imdb.cpp  nosimd_baseline.h
PNMLibrary/benchmarks/otp_gen/: build.cmake  main.cpp
PNMLibrary/benchmarks/sls_op/: build.cmake  dummy_cpu.h  main.cpp
PNMLibrary/benchmarks/statistical_check/: build.cmake  main.cpp
PNMLibrary/benchmarks/time_check/: build.cmake  main.cpp  plot_time_info.py
PNMLibrary/benchmarks/variation_exec_nums/: build.cmake  main.cpp
PNMLibrary/cmake/: PNMLibConfig.cmake  install.cmake  package.cmake  utils.cmake
PNMLibrary/common/: CMakeLists.txt  compiler_internal.h  cpu_sls.h  error_message.h  file_descriptor_holder.h  log.h  make_error.h  mapped_file.h  misc_control.h  profile.h  sls_types.h  temporary_filesystem_object.h  timer.h  topology_constants.h
PNMLibrary/common/memory/: atomic.h  barrier.h
PNMLibrary/common/threads/: action_consumer.h  action_queue.h  name.h  producer_consumer.h  workers_storage.h
PNMLibrary/core/: CMakeLists.txt
PNMLibrary/core/context/: CMakeLists.txt  imdb.h  sls.h
PNMLibrary/core/device/: CMakeLists.txt  device.cpp
PNMLibrary/core/memory/: CMakeLists.txt  barrier.h  ranked_allocator.cpp  ranked_allocator.h  sequential_accessor.cpp  sequential_accessor.h  sequential_allocator.cpp  sequential_allocator.h
PNMLibrary/core/operation/: internal.h
PNMLibrary/core/operation_runner/: CMakeLists.txt  internal_runner.h  sls_execution_pool.h
PNMLibrary/docs/coding_guidelines/: Braces-around-statements.md  Coding-guidelines.md  Const-correctness.md  Final_classes_and_methods.md  Function-parameters-passing-rules.md  Header-inclusion-rules.md  Smart-Pointer-Guidelines.md  TODO-comments.md  Using-ifdefs.md
PNMLibrary/docs/diagrams/: pnm_structure.txt
PNMLibrary/docs/howto/: embedded_tables.md  embedding_tables.md  generate_indices.md  ipc_region_sharing.md  test_dataset.md
PNMLibrary/hw/: axdimm_hw_config.h  pnm_addr_constants.h  pnm_addr_constants_types.h  pnm_hw_instr_constants.h  pnm_sim_addr_constants.h  sls_cpu_config.h
PNMLibrary/imdb/: CMakeLists.txt
PNMLibrary/imdb/operation/: CMakeLists.txt  scan.cpp  scan.h
PNMLibrary/imdb/software_scan/: CMakeLists.txt
PNMLibrary/scripts/: build.sh  check_includes.py  check_includes.sh  common_checks.sh  create_test_dataset.sh  postinst  prerm  setup_dax_device.sh
PNMLibrary/secure/: CMakeLists.txt  README.md
PNMLibrary/secure/common/: sls_executor.h  sls_io.h  sls_runner.h
PNMLibrary/secure/encryption/: io_traits.h  sls_dlrm_postprocessor.h  sls_dlrm_preprocessor.h  sls_engine.h  sls_mac.h  sls_postrocessor.h  sls_preprocessor.h
PNMLibrary/secure/plain/: sls.h
PNMLibrary/secure/shared/: sls_runner_factory.cpp
PNMLibrary/sls/: CMakeLists.txt
PNMLibrary/sls/compute_unit/: CMakeLists.txt  axdimm_compute_unit.cpp  axdimm_compute_unit.h  compute_unit.h  cxl_compute_unit.cpp  cxl_compute_unit.h
PNMLibrary/sls/operation/: CMakeLists.txt  execution_generator.cpp  execution_generator.h  inst_generator.h  internal.h  ir.h  packs_data.cpp  packs_data.h  param_checks.cpp  param_checks.h  reduction_operation.h  trace_generator.h  trace_generator_core.cpp  trace_generator_core.h
PNMLibrary/test/: CMakeLists.txt
PNMLibrary/test/action_queue/: main.cpp
PNMLibrary/test/aes_encryption/: build.cmake  compile.sh  main.cpp
PNMLibrary/test/async_runner/: main.cpp
PNMLibrary/test/common_utils/: fd_holder.cpp  map_file.cpp
PNMLibrary/test/device/: build.cmake  common.h  imdb.cpp  process_manager.cpp  sls.cpp  sysfs.cpp  sysfs_topo.cpp  wrapper.cpp  wrapper.h
PNMLibrary/test/embedded_tables/: tables.cpp
PNMLibrary/test/embedding_tables/: tables.cpp
PNMLibrary/test/encryption_engine/: build.cmake  main.cpp  main.x
PNMLibrary/test/execution_pool/: main.cpp
PNMLibrary/test/imdb_app/: build.cmake  imdb.h  main.cpp
PNMLibrary/test/imdb_bits/: bitcommon.cpp  bitstorage.cpp  bitviews.cpp
PNMLibrary/test/imdb_datagen/: golden_vec.cpp  max_value.cpp  predictor_vecs.cpp  ranges.cpp  selectivity.cpp  table_column.cpp
PNMLibrary/test/imdb_demo/: README.md  build.cmake  main.cpp
PNMLibrary/test/imdb_scan_operation/: main.cpp
PNMLibrary/test/imdb_simulator_core/: build.cmake  main.cpp
PNMLibrary/test/instr_parsing/: build.cmake  main.cpp
PNMLibrary/test/io_traits/: main.cpp
PNMLibrary/test/mocks/: build.cmake
PNMLibrary/test/numa_node/: build.cmake  main.cpp  run.sh
PNMLibrary/test/pnm_memory/: accessor.cpp  allocator.cpp  buffer.cpp  shared_pool.cpp  sls_suppl.h  transfer.cpp
PNMLibrary/test/properties/: properties.cpp
PNMLibrary/test/rank_io_tests/: main.cpp
PNMLibrary/test/secndp_demo/: README.md  build.cmake  main.cpp  secndp_demo_common.h  test_units.h
PNMLibrary/test/secndp_example/: build.cmake  main.cpp
PNMLibrary/test/secure_devices/: untrusted_cpu.cpp
PNMLibrary/test/secure_exec/: build.cmake  main.cpp
PNMLibrary/test/shared_region_receiver/: build.cmake  shared_receiver.cpp
PNMLibrary/test/simple_sls_app/: build.cmake  simple_app.cpp
PNMLibrary/test/sls_app/: build.cmake
PNMLibrary/test/sls_datagen/: golden_vec.cpp  indices.cpp  tables_load.cpp
PNMLibrary/test/sls_types/: fixed_vector.cpp
PNMLibrary/test/stress/: allocator.cpp  allocator.h  build.cmake  multithread_allocator.cpp  secndp.cpp
PNMLibrary/test/table_manipulation/: build.cmake  fixtures.h  ptr_rw.h  secure_postprocessor.cpp  table_preprocessor.cpp
PNMLibrary/test/utils/: pnm_fmt.h
PNMLibrary/tools/: CMakeLists.txt  create_indices.cpp  create_tables.cpp
(+745 files in other folders)
